--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,12 @@
   "name": "recettes-cuisine-backend",
   "version": "1.0.0",
   "description": "Recettes Cuisine Backend",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "Backend Dev": "nodemon server.js"
+    "Backend Dev": "ts-node-dev server.ts",
+    "build": "tsc",
+    "lint": "eslint .",
+    "start": "node build/app.js"
   },
   "author": {
     "name": "Choupal",
@@ -14,12 +17,22 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.9.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@eslint/js": "^9.19.0",
+    "@stylistic/eslint-plugin": "^3.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.12.0",
+    "eslint": "^9.19.0",
+    "nodemon": "^3.1.9",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0"
   }
 }
