--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,9 +6,10 @@
   "main": "index.js",
   "scripts": {
     "Frontend Dev": "vite",
-    "Frontend Build": "vite build && cd dist/assets && npx postcss *.css --use autoprefixer -r --verbose --no-map",
+    "Frontend Build": "tsc -b && vite build && cd dist/assets && npx postcss *.css --use autoprefixer -r --verbose --no-map",
     "Frontend Preview": "vite preview",
-    "build": "vite build && cd dist/assets && npx postcss *.css --use autoprefixer -r --verbose --no-map"
+    "build": "tsc -b && vite build && cd dist/assets && npx postcss *.css --use autoprefixer -r --verbose --no-map",
+    "lint": "eslint ."
   },
   "author": {
     "name": "Choupal",
@@ -17,19 +18,26 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "axios": "^1.7.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@eslint/js": "^9.20.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
-    "vite": "^5.4.11"
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.1.1"
   },
   "browserslist": [
     "cover 99.5%",
